--- a/001.HTML/000.T_Pj/0.Portfolio_Pj/index.html
+++ b/001.HTML/000.T_Pj/0.Portfolio_Pj/index.html
@@ -16,8 +16,20 @@
             </a>
         </h1>
     </header>
+
     <div class="body">
-            
+            <div class="imgbox">
+                <img src="images/main_img.jpg" alt="메인이미지">
+            </div>
     </div>
+
+    <footer class="footer">
+        <ul class="contact">
+            <li><a href="#">E-MAIL : vlwktksek1@naver.com</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">INSTAGRAM</a></li>
+            <li><a href="#">TEL : 010-3362-1793</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
