--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -9,12 +9,7 @@
     <link rel="shortcut icon" href="./img/sub4link.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./css/sub4.css">
     <link rel="stylesheet" href="./css/submedia.css">
-
     <script src="./JS/main.js"></script>
-    <script>
-
-      </script>
-
 </head>
 
 <body>
@@ -76,7 +71,7 @@
 
         <header class="top ibx">
             <div class="logo">
-                <a href="./index.html">
+                <a href="#">
                     <img class="log" src="./img/sealogo.jpeg" alt="바다가들린다 로고">
                 </a>
             </div>
