--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -94,40 +94,39 @@
         </header>
     </div>
 
-    
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
         <section id="pg" class="cont1">
             <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted loop></video>
             <audio autoplay controls loop onloadstart="this.volume=0.3">
-            <source src="./img/ocean_waves.mp3"autoplay type="audio/mpeg">
-               Your browser does not support the audio element.
-               이 브라우저에서는 오디오가 지원되지 않습니다.
+                <source src="./img/ocean_waves.mp3" autoplay type="audio/mpeg">
+                Your browser does not support the audio element.
+                이 브라우저에서는 오디오가 지원되지 않습니다.
             </audio>
             <div class="play-backdrop"></div>
             <div class="backmain">
                 <div onclick="location.href ='./index.html'">
                     <a class="back">⥪Back</a>
                 </div>
-                    </div>
-                    <div class="play-button">
-                        <svg class="play-circles" viewBox="0 0 152 152">
-                            <circle class="play-circle-01" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="343"
-                            cx="76" cy="76" r="72.7" />
-                            <circle class="play-circle-02" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="309"
-                            cx="76" cy="76" r="65.5" />
-                        </svg>
-                        <div class="play-perspective">
-                            <button class="play-close"></button>
-                            <div class="play-triangle">
-                                <div class="play-video">
-                                    <iframe width="600" height="400" src="https://www.youtube.com/embed/tfkHiHjrqa8"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe>
-                                </div>
-                            </div>
+            </div>
+            <div class="play-button">
+                <svg class="play-circles" viewBox="0 0 152 152">
+                    <circle class="play-circle-01" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="343"
+                        cx="76" cy="76" r="72.7" />
+                    <circle class="play-circle-02" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="309"
+                        cx="76" cy="76" r="65.5" />
+                </svg>
+                <div class="play-perspective">
+                    <button class="play-close"></button>
+                    <div class="play-triangle">
+                        <div class="play-video">
+                            <iframe width="600" height="400" src="https://www.youtube.com/embed/tfkHiHjrqa8"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
                     </div>
+                </div>
+            </div>
         </section>
         <!-- partial -->
         <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js'></script>
@@ -155,11 +154,15 @@
                                 <p>
                                     스튜디오 지브리가 제작한 TV판 애니메이션이다. 도쿄에서 전학 온 리카코를 좋아하게 된 타쿠와 마츠노의 우정과 사랑을 그린 이야기. <br><br>
 
-                                    &lt;바다가 들린다&gt;의 의미는 상당히 제유적으로 나타난다. 때문에 단순히 바다를 자주 보여준다거나 하와이가 등장하는 것에서 의미를 찾아야 하는 것이 아니라 그들이 어른이 되어서 생각하는 성장의 과정을 생각해 봐야 한다.<br><br>
+                                    &lt;바다가 들린다&gt;의 의미는 상당히 제유적으로 나타난다. 때문에 단순히 바다를 자주 보여준다거나 하와이가 등장하는 것에서 의미를 찾아야 하는
+                                    것이 아니라 그들이 어른이 되어서 생각하는 성장의 과정을 생각해 봐야 한다.<br><br>
 
-                                    특히 동창회에서 타쿠는 시미즈와 대화를 나누던 중<br> “학교 이외의 세계가 생기면 싫은 애 한둘 쯤은 어떻게 되어도 상관없다고 생각하게 된다”는 얘기를 하게 되는데 이 말이 제목인 &lt;바다가 들린다&gt;의 의미를 생성한다.<br><br>
+                                    특히 동창회에서 타쿠는 시미즈와 대화를 나누던 중<br> “학교 이외의 세계가 생기면 싫은 애 한둘 쯤은 어떻게 되어도 상관없다고 생각하게 된다”는
+                                    얘기를 하게 되는데 이 말이 제목인 &lt;바다가 들린다&gt;의 의미를 생성한다.<br><br>
 
-                                    타쿠의 동창생들은 고등학교 시절 외부에서 온 리카코가 자신들과 화합하지 않는다는 이유로 따돌리는 모습을 보여준다. 그런 이들이 성장하여 돌이켜보니 넓은 세상에서 그런 일쯤은 아무것도 아니라는 것을 알게 된다. 결국 넓은 세상은 ‘바다’를 가리키고, ‘들린다’는 그런 넓은 마음을 갖게 되었다는 것을 뜻하며, 바다가 가진 향수와 관대함을 연관시키며 의미하는 바를 만들어내는 것이다.<br><br>
+                                    타쿠의 동창생들은 고등학교 시절 외부에서 온 리카코가 자신들과 화합하지 않는다는 이유로 따돌리는 모습을 보여준다. 그런 이들이 성장하여 돌이켜보니 넓은
+                                    세상에서 그런 일쯤은 아무것도 아니라는 것을 알게 된다. 결국 넓은 세상은 ‘바다’를 가리키고, ‘들린다’는 그런 넓은 마음을 갖게 되었다는 것을
+                                    뜻하며, 바다가 가진 향수와 관대함을 연관시키며 의미하는 바를 만들어내는 것이다.<br><br>
 
                                 </p>
                             </div>
@@ -246,7 +249,8 @@
                                 </h3>
                                 <p>
                                     3학년이 돼서야 리카코와 친해진 친구<br><br>
-                                    어느 날 타쿠는 유미로부터 전화를 받고, 리카코가 고하마에게 콘서트를 같이 가자는 거짓말을 하고 도쿄행 비행기 티켓을 끊은 것을 알게 되었다.<br><br>
+                                    어느 날 타쿠는 유미로부터 전화를 받고, 리카코가 고하마에게 콘서트를 같이 가자는 거짓말을 하고 도쿄행 비행기 티켓을 끊은 것을 알게
+                                    되었다.<br><br>
                                     타쿠는 자신에게 돈을 빌린 이유를 알게 되었고 배신감을 느끼지만, 아빠를 만나고 싶어하는 리카코와 함께 도쿄에 가게 된다.
                                 </p>
                             </div>
@@ -255,18 +259,18 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- /******************************************* cont3 *******************************************/ -->
-            <section id="pg3" class="cont3">
-                <div class="inner">
-                    <h2 class="tit">Ending</h2>
-                    <div class="end">
-                        <img src="./img/sub4img/ending.gif" alt="엔딩장면">
-                    </div>
-                    <div class="txtbx">
-                        주인공의 현재 대학 생활과 고등학교 시절에 대한 회상이 교차하는 원작과는 달리 시간 관계상 고등학교 시절만을 다루고 있으며,<br>
-                        마지막 장면은 횡단보도였으나,<br>
-                        '보긴 보았으나 확신할 수 없는 장면을 연출하고 싶다' 며 기차 사이로 바뀌는 등, 그외 몇 가지 변화가 더 있다.
+        <section id="pg3" class="cont3">
+            <div class="inner">
+                <h2 class="tit">Ending</h2>
+                <div class="end">
+                    <img src="./img/sub4img/ending.gif" alt="엔딩장면">
+                </div>
+                <div class="txtbx">
+                    주인공의 현재 대학 생활과 고등학교 시절에 대한 회상이 교차하는 원작과는 달리 시간 관계상 고등학교 시절만을 다루고 있으며,<br>
+                    마지막 장면은 횡단보도였으나,<br>
+                    '보긴 보았으나 확신할 수 없는 장면을 연출하고 싶다' 며 기차 사이로 바뀌는 등, 그외 몇 가지 변화가 더 있다.
                     <div class="end">
                         <img src="./img/sub4img/ending2.gif" alt="엔딩장면">
                     </div>
@@ -276,15 +280,14 @@
                         게다가 리카코가 도쿄에서 만나고 싶어 하는 사람이 자신임을 알게 되면서 새삼스럽게 설레고 있었다.<br>
                         다시 도쿄로 돌아와 플랫폼에서 리카코를 발견하고 만났을 때, 자신의 감정을 확신하며 했던 말이다.
                     </div>
-
                 </div>
-
-
-            </section>
+        </section>
         </main>
+
         <!-- /******************************************* 하단 *******************************************/ -->
         <footer id="footer">
-            <a href="https://www.ghibli.jp/"><abbr title="지브리 공식홈페이지"><img class="ghibli" src="./img/sub4img/gibrri.png" alt="지브리로고"></abbr></a>
+            <a href="https://www.ghibli.jp/"><abbr title="지브리 공식홈페이지"><img class="ghibli" src="./img/sub4img/gibrri.png"
+                        alt="지브리로고"></abbr></a>
             <a href="#">OCEAN WAVES</a>
         </footer>
 </body>
