--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -23,7 +23,7 @@
             <button class="cbtn" onclick="sMenu()">×</button>
             <ul>
                 <li>
-                    <a href="#">Studio Ghibliaaa</a>
+                    <a href="#">Studio Ghibli</a>
                     <ol class="smenu">
                         <li>
                             <a href="#">인사말</a>
