--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -26,19 +26,18 @@
                     <a href="#">Studio Ghibli</a>
                     <ol class="smenu">
                         <li>
-                            <a href="#">인사말</a>
+                            <a href="#">Home</a>
                         </li>
                         <li>
-                            <a href="#">심사 및 어워드</a>
+                            <a href="#pg1">Ocean Waves</a>
                         </li>
                         <li>
-                            <a href="#">조직구성</a>
+                            <a href="#pg2">Characters</a>
                         </li>
                     </ol>
                 </li>
                 <li>
                     <a href="#">영화</a>
-                    <!-- 서브메뉴 -->
                     <ol class="smenu">
                         <li>
                             <a href="#">상영관</a>
@@ -98,10 +97,10 @@
     <div id="cont">
         <section id="pg" class="cont1">
             <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted loop></video>
-            <audio autoplay controls loop onloadstart="this.volume=0.3">
+            <!-- <audio autoplay controls loop onloadstart="this.volume=0.3">
                 <source src="./img/ocean_waves.mp3" autoplay type="audio/mpeg">
                 Your browser does not support the audio element.
-                이 브라우저에서는 오디오가 지원되지 않습니다.
+                이 브라우저에서는 오디오가 지원되지 않습니다. -->
             </audio>
             <div class="play-backdrop"></div>
             <div class="backmain">
