--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -147,7 +147,7 @@
                                     <img class="iimg" src="./img/sub4img/img1.jpeg" alt="포스터" style="display: inline">
                                 </div>
                                 <h3>
-                                    바다가 들린다
+                                    시놉시스
                                     <span>海がきこえる</span>
                                 </h3>
                                 <p>
