--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -146,8 +146,7 @@
                                 <div class="img">
                                     <img class="iimg" src="./img/sub4img/img1.jpeg" alt="포스터" style="display: inline">
                                 </div>
-                                <h3>
-                                    시놉시스
+                                <h3>시놉시스
                                     <span>海がきこえる</span>
                                 </h3>
                                 <p>
