--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -97,10 +97,10 @@
     <div id="cont">
         <section id="pg" class="cont1">
             <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted loop></video>
-            <!-- <audio autoplay controls loop onloadstart="this.volume=0.3">
+            <audio autoplay controls loop onloadstart="this.volume=0.3">
                 <source src="./img/ocean_waves.mp3" autoplay type="audio/mpeg">
                 Your browser does not support the audio element.
-                이 브라우저에서는 오디오가 지원되지 않습니다. -->
+                이 브라우저에서는 오디오가 지원되지 않습니다.
             </audio>
             <div class="play-backdrop"></div>
             <div class="backmain">
@@ -110,10 +110,10 @@
             </div>
             <div class="play-button">
                 <svg class="play-circles" viewBox="0 0 152 152">
-                    <circle class="play-circle-01" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="343"
+                    <!-- <circle class="play-circle-01" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="343"
                         cx="76" cy="76" r="72.7" />
                     <circle class="play-circle-02" fill="none" stroke="#fff" stroke-width="3" stroke-dasharray="309"
-                        cx="76" cy="76" r="65.5" />
+                        cx="76" cy="76" r="65.5" /> -->
                 </svg>
                 <div class="play-perspective">
                     <button class="play-close"></button>
