--- a/001.HTML/000.T_Pj/4.uni/index.html
+++ b/001.HTML/000.T_Pj/4.uni/index.html
@@ -30,7 +30,7 @@
         <nav class="gnb">
             <ul class="mainManu">
                 <li><a href="#">천문대 소개</a>
-                    <ul class="sMenu sMenu1">
+                    <ul class="sMenu">
                         <li><a href="#">인사말</a></li>
                         <li><a href="#">시설소개</a></li>
                         <li><a href="#">오시는 길</a></li>
@@ -38,7 +38,7 @@
                 </li>
                 <li><a href="#">이용안내</a></li>
                 <li><a href="#">프로그램</a>
-                    <ul class="sMenu smenu2">
+                    <ul class="sMenu">
                         <li><a href="#">단체 프로그램</a></li>
                         <li><a href="#">일일 프로그램</a></li>
                         <li><a href="#">예약하기</a></li>
