--- a/index1.html
+++ b/index1.html
@@ -36,7 +36,7 @@
                 <a href="./001.HTML/008.VOGUE_PJ/002.site/index.html" target="_blank">VOGUE</a>
             </li>
             <li>
-                <a href="./Pj_BIFF/index.html" target="_blank">BIFF</a>
+                <a href="./001.HTML/010.Pj_BIFF/index.html" target="_blank">BIFF</a>
             </li>
             <li>
                 <a href="./001.HTML/011.BS_STUDIO_Pj/002.site/intro.html" target="_blank">BS STUDIO</a>
