--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -98,7 +98,9 @@
                     Your browser does not support the audio element.
                     이 브라우저에서는 오디오가 지원되지 않습니다.
                 </audio> -->
-                <audio id="bgm" autoplay loop onloadstart="this.volume=0.3" src="./img/ocean_waves.mp3"></audio>
+                <audio id="bgm" autoplay loop onloadstart="this.volume=0.3" src="./img/ocean_waves.mp3">
+                    Your browser does not support the audio element.
+                    이 브라우저에서는 오디오가 지원되지 않습니다.</audio>
 
             </div>
 
