--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -93,15 +93,15 @@
                 <div class="audio-wave" onclick="toggleAudio()">
                     <div id="wave-animation" class="wave-animation"></div>
                 </div>
-                <!-- <audio id="bgm" autoplay controls loop onloadstart="this.volume=0.3">
-                    <source src="./img/ocean_waves.mp3" autoplay type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    이 브라우저에서는 오디오가 지원되지 않습니다.
-                </audio> -->
+                <p class="audiotxt">BGM Play!</p>
                 <audio id="bgm" autoplay loop onloadstart="this.volume=0.3" src="./img/ocean_waves.mp3">
                     Your browser does not support the audio element.
                     이 브라우저에서는 오디오가 지원되지 않습니다.</audio>
-
+                    <!-- <audio id="bgm" autoplay controls loop onloadstart="this.volume=0.3">
+                        <source src="./img/ocean_waves.mp3" autoplay type="audio/mpeg">
+                        Your browser does not support the audio element.
+                        이 브라우저에서는 오디오가 지원되지 않습니다.
+                    </audio> -->
             </div>
 
         </header>
