--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -110,7 +110,7 @@
     <!-- /******************************************* cont1 *******************************************/ -->
     <div id="cont">
         <section id="pg" class="cont1">
-            <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted loop></video>
+            <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted playsinline loop></video>
 
             
         
