--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="./img/sub4link.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./css/sub4.css">
     <link rel="stylesheet" href="./css/submedia.css">
-    <script src="./JS/main.js"></script>
 </head>
 
 <body>
@@ -67,20 +66,17 @@
                 <li><a href="#"><img class="ghilogo" src="./img/sub4img/gibrri.png" alt="지브리"></a></li>
             </ul>
         </nav>
-
         <header class="top ibx">
             <div class="logo">
                 <a href="#">
                     <img class="log" src="./img/sealogo.jpeg" alt="바다가들린다 로고">
                 </a>
             </div>
-
             <div class="gnb2">
                 <div>
                     <ul class="lb">
                         <li class="on"><a href="#pg1">Ocean Waves</a></li>
                     </ul>
-
                 </div>
                 <div>
                     <ul class="rb">
@@ -103,7 +99,6 @@
                     Your browser does not support the audio element.
                     이 브라우저에서는 오디오가 지원되지 않습니다.
                 </audio> -->
-
         </header>
     </div>
 
@@ -112,15 +107,10 @@
         <section id="pg" class="cont1">
             <video class="Mvideo" src="./img/ocean_waves.mp4" autoplay muted playsinline loop></video>
 
-            <div class="play-backdrop"></div>
-            <div class="backmain">
-                <div onclick="location.href ='./index.html'">
-                    <a class="back">⥪Back</a>
-                </div>
-            </div>
+            <!-- <div onclick="location.href ='./index.html'">
+                <a class="back">⥪Back</a>
+            </div> -->
         </section>
-
-        <script src="./JS/submain.js"></script>
 
         <!-- /******************************************* cont2 *******************************************/ -->
         <section id="pg1" class="cont2">
@@ -130,29 +120,27 @@
                     <div class="box1">
                         <div class="imgtxtbx">
                             <div class="imgbx">
-                                <div class="mainposter"></div>
+                                포스터이미지
                             </div>
-                            <div class="txtbx">
-                                <div class="img">
-                                    <img class="iimg" src="./img/sub4img/img1.jpeg" alt="포스터" style="display: inline">
+                            <div class="re">
+                                <div class="txtbx">
+                                    <div class="img">
+                                        <img class="iimg" src="./img/sub4img/img1.jpeg" alt="포스터">
+                                    </div>
+                                    <h3>제목의 의미
+                                        <!-- <span>海がきこえる</span> -->
+                                    </h3>
+                                    <p>
+                                        스튜디오 지브리가 제작한 TV판 애니메이션이다. 도쿄에서 전학 온 리카코를 좋아하게 된 타쿠와 마츠노의 우정과 사랑을 그린 이야기. <br><br>
+                                        &lt;바다가 들린다&gt;의 의미는 상당히 비유적으로 나타난다. 때문에 단순히 바다를 자주 보여준다거나 하와이가 등장하는 것에서 의미를 찾아야 하는
+                                        것이 아니라 그들이 어른이 되어서 생각하는 성장의 과정을 생각해 봐야 한다.<br><br>
+                                        특히 동창회에서 타쿠는 시미즈와 대화를 나누던 중<br> “학교 이외의 세계가 생기면 싫은 애 한둘 쯤은 어떻게 되어도 상관없다고 생각하게 된다”는
+                                        얘기를 하게 되는데 이 말이 제목인 &lt;바다가 들린다&gt;의 의미를 생성한다.<br><br>
+                                        타쿠의 동창생들은 고등학교 시절 외부에서 온 리카코가 자신들과 화합하지 않는다는 이유로 따돌리는 모습을 보여준다. 그런 이들이 성장하여 돌이켜보니 넓은
+                                        세상에서 그런 일쯤은 아무것도 아니라는 것을 알게 된다.<br>결국 넓은 세상은 ‘바다’를 가리키고, ‘들린다’는 그런 넓은 마음을 갖게 되었다는 것을
+                                        뜻하며, 바다가 가진 향수와 관대함을 연관시키며 의미하는 바를 만들어내는 것이다.<br><br>
+                                    </p>
                                 </div>
-                                <h3>시놉시스
-                                    <span>海がきこえる</span>
-                                </h3>
-                                <p>
-                                    스튜디오 지브리가 제작한 TV판 애니메이션이다. 도쿄에서 전학 온 리카코를 좋아하게 된 타쿠와 마츠노의 우정과 사랑을 그린 이야기. <br><br>
-
-                                    &lt;바다가 들린다&gt;의 의미는 상당히 비유적으로 나타난다. 때문에 단순히 바다를 자주 보여준다거나 하와이가 등장하는 것에서 의미를 찾아야 하는
-                                    것이 아니라 그들이 어른이 되어서 생각하는 성장의 과정을 생각해 봐야 한다.<br><br>
-
-                                    특히 동창회에서 타쿠는 시미즈와 대화를 나누던 중<br> “학교 이외의 세계가 생기면 싫은 애 한둘 쯤은 어떻게 되어도 상관없다고 생각하게 된다”는
-                                    얘기를 하게 되는데 이 말이 제목인 &lt;바다가 들린다&gt;의 의미를 생성한다.<br><br>
-
-                                    타쿠의 동창생들은 고등학교 시절 외부에서 온 리카코가 자신들과 화합하지 않는다는 이유로 따돌리는 모습을 보여준다. 그런 이들이 성장하여 돌이켜보니 넓은
-                                    세상에서 그런 일쯤은 아무것도 아니라는 것을 알게 된다. 결국 넓은 세상은 ‘바다’를 가리키고, ‘들린다’는 그런 넓은 마음을 갖게 되었다는 것을
-                                    뜻하며, 바다가 가진 향수와 관대함을 연관시키며 의미하는 바를 만들어내는 것이다.<br><br>
-
-                                </p>
                             </div>
                         </div>
                     </div>
@@ -161,7 +149,7 @@
                             <h2>캐릭터 소개</h2>
                             <div class="txtbx">
                                 <div class="img">
-                                    <img class="iimg" src="./img/sub4img/taku.jpeg" alt="포스터" style="display: inline">
+                                    <img class="iimg" src="./img/sub4img/taku.jpeg" alt="포스터">
                                 </div>
                                 <h3>
                                     모리사키 타쿠
@@ -170,22 +158,20 @@
                                 <p>
                                     이 이야기의 주인공. 고치의 명문 사립 고등학교 출신. 우등생이긴 하나 한편 교사에 대하여 자신의 의견을 주장하는 반골정신의 소유자.<br><br>
                                     평범하지만 정의감 넘치는 소년, 리카코를 좋아하는 자신의 감정을 깨닫지 못하는 둔감한 구석이 있다.<br><br>
-                                    고교 졸업 후, 도쿄의 대학으로 진학한다. 본가는 고치 시의 고다이산(五台山).
+                                    고교 졸업 후, 도쿄의 대학으로 진학한다. 본가는 고치 시의 고다이산(五台山)
                                 </p>
                             </div>
                             <div class="imgbx scdimg">
-                                <div class="mainposter"></div>
                             </div>
                         </div>
                     </div>
                     <div class="box1">
                         <div class="imgtxtbx">
                             <div class="imgbx trdimg">
-                                <div class="mainposter"></div>
                             </div>
                             <div class="txtbx">
                                 <div class="img">
-                                    <img class="iimg" src="./img/sub4img/rikako.jpeg" alt="포스터" style="display: inline">
+                                    <img class="iimg" src="./img/sub4img/rikako.jpeg" alt="포스터">
                                 </div>
                                 <h3>
                                     무토 리카코
@@ -195,7 +181,8 @@
                                     부모의 이혼으로 전학하게 된 소녀, 어머니와 함께 도쿄에서 고치로 전학옴.<br><br>
                                     성적도 좋고 운동도 잘하지만 친구들과 어울리지 못하고 제멋대로 행동한다.<br><br>
                                     자신의 의견과 반하여 오게 된 고치에 대한 반발심, 도쿄에의 그리움으로, 주변과 어울리려 하지 않으며 따돌림을 받고 있다.<br><br>
-                                    그러나 본인은 그것에 전혀 신경을 쓰고 있지 않는다.<br> 친구는 고하마 유미 한명 뿐이다. 다쿠와 마쓰노가 연심을 품고 있다.</p>
+                                    그러나 본인은 그것에 전혀 신경을 쓰고 있지 않는다.<br> 친구는 고하마 유미 한명 뿐이다. 다쿠와 마쓰노가 연심을 품고 있다.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -203,7 +190,7 @@
                         <div class="imgtxtbx">
                             <div class="txtbx">
                                 <div class="img">
-                                    <img class="iimg" src="./img/sub4img/utaka.jpeg" alt="포스터" style="display: inline">
+                                    <img class="iimg" src="./img/sub4img/utaka.jpeg" alt="포스터">
                                 </div>
                                 <h3>
                                     마쓰노 유타카
@@ -212,24 +199,21 @@
                                 <p>
                                     타쿠의 절친한 친구로, 타쿠와는 수학여행 취소 설명회에서 알게 되었다.<br><br>
                                     성적도 우수한 편으로 반장을 맡고 있으나, 특히 눈에 띄지 않는 평범한 학생.<br><br>
-                                    리카코에게 첫눈에 반하고 타쿠에게는 그 감정을 잘 숨기지 못한다.<br>
-                                    반에 제대로 적응하지 못하는 리카코를 걱정하며 신경을 써줌.<br><br>
+                                    리카코에게 첫눈에 반하고 타쿠에게는 그 감정을 잘 숨기지 못하며 반에 제대로 적응하지 못하는 리카코를 걱정하며 신경을 써준다.<br><br>
                                     고교 졸업 후 교토의 대학으로 진학한다.
                                 </p>
                             </div>
                             <div class="imgbx fimg">
-                                <div class="mainposter"></div>
                             </div>
                         </div>
                     </div>
                     <div class="box1">
                         <div class="imgtxtbx">
                             <div class="imgbx fifimg">
-                                <div class="mainposter"></div>
                             </div>
                             <div class="txtbx">
                                 <div class="img">
-                                    <img class="iimg" src="./img/sub4img/umi.jpeg" alt="포스터" style="display: inline">
+                                    <img class="iimg" src="./img/sub4img/umi.jpeg" alt="포스터">
                                 </div>
                                 <h3>
                                     고하마 유미
@@ -278,6 +262,8 @@
                         alt="지브리로고"></abbr></a>
             <a href="#">OCEAN WAVES</a>
         </footer>
+        <script src="./JS/submain.js"></script>
+
 </body>
 
 </html>
