--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -125,9 +125,9 @@
                             <div class="re">
                                 <div class="txtbx">
                                     <div class="img">
-                                        <img class="iimg" src="./img/sub4img/img1.jpeg" alt="포스터">
+                                        <img class="iimg" src="./img/sub4img/img1.webp" alt="포스터">
                                     </div>
-                                    <h3>제목의 의미
+                                    <h3>'바다가 들린다' 제목의 의미
                                         <!-- <span>海がきこえる</span> -->
                                     </h3>
                                     <p>
