--- a/001.HTML/010.Pj_BIFF/sub4.html
+++ b/001.HTML/010.Pj_BIFF/sub4.html
@@ -178,7 +178,7 @@
                                     <span>武藤 里伽子</span>
                                 </h3>
                                 <p>
-                                    부모의 이혼으로 전학하게 된 소녀, 어머니와 함께 도쿄에서 고치로 전학옴.<br><br>
+                                    부모의 이혼으로 전학하게 된 소녀, 어머니와 함께 도쿄에서 고치로 전학왔다.<br><br>
                                     성적도 좋고 운동도 잘하지만 친구들과 어울리지 못하고 제멋대로 행동한다.<br><br>
                                     자신의 의견과 반하여 오게 된 고치에 대한 반발심, 도쿄에의 그리움으로, 주변과 어울리려 하지 않으며 따돌림을 받고 있다.<br><br>
                                     그러나 본인은 그것에 전혀 신경을 쓰고 있지 않는다.<br> 친구는 고하마 유미 한명 뿐이다. 다쿠와 마쓰노가 연심을 품고 있다.
